--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
+    "react-twitter-embed": "^4.0.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
   },
@@ -48,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@wixc3/react-board": "^2.2.0"
   }
 }
