--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
+    "react-simple-maps": "^3.0.0",
     "react-twitter-embed": "^4.0.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
